CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.2:
 4: (xx-xx-xx)
  GridCoordSys.getRangesFromLatLonRect() uses LatLonPointImpl.lonNormalFrom() for latlon bounding box
  HDF5 bug: group btree entries were the wrong size when offsets = 4 bytes (!)
  Change GRIB projection name "rotated_lat_lon" to "rotated_latlon_grib"
  WRFConventions: stereographic projection use centralLat ("CEN_LAT") when available
  HDF5 bug: group btree entries were the wrong size when offsets = 4 bytes (!)
  MADIS/AWIPS station profile improvements to plugin
  GRIB adds attribute _CoordinateTransforms = "" to lat/lon Coord sys variable; no longer need weird code in CoordSysBuilder.VarProcess()
  MSGNavigation had major/minor axes reversed
  hdf5, nc3: attributes with no value
  add StereographicAzimuthalProjection, TransverseMercatorProjection elliptical earth (Heiko.Klein@met.no)
  FeatureCollectionConfig.Config: use collection name if it exists
  CollectionSpecParser, FeatureCollectionConfig: trim the spec string
  bugs in CoordinateAxis1D.findCoordElement - remove longitude special case, rely on fixing mononicity.
  VariableDS copy constructor - dont apply scale/offset twice
  hdf5: variable length array of strings, not incrementing counter (Steve Sullivan)
  hdf5: bug in CHAR type when compressed (Steve Sullivan)  grib refactor - time intervals
  ToolsUI - IOSP/GRIB2 tab
  Comparators using longs were wrong, eg DiskCache (bug fix from Steve Ansari)
  CF1 use super.getAxisType()
  CF1 break apart convention list
  DODS parser: fix alias command in the DAS
 3:(2010-05-27)
  NetcdfFile.readSection(String) should unescape names
  DODNetcdfDataset.getDetailInfo() shows DAS, DDS.
  CoordinateAxis1D non-monotonic lon coordinates bug
  VariableDS() constructor must distinguish between copy() and CoordinateAxis()
  VariableDS.needConvert() for StructureDS.convert()