@@ -19,6 +19,63 @@
       <properties />
     </buildFile>
   </component>
+  <component name="ArtifactManager">
+    <artifact type="exploded-war" name="tds:tds exploded">
+      <output-path>$PROJECT_DIR$/../../tds/target/war</output-path>
+      <root id="root">
+        <element id="javaee-facet-resources" facet="tds/web/tds" />
+        <element id="directory" name="WEB-INF">
+          <element id="directory" name="classes">
+            <element id="module-output" name="tds" />
+            <element id="module-output" name="cdm" />
+            <element id="dir-copy" path="$PROJECT_DIR$/../../tds/src/main/webapp/WEB-INF/classes" />
+            <element id="dir-copy" path="$PROJECT_DIR$/../../tds/src/main/webapp-cdmValidator/WEB-INF/classes" />
+            <element id="dir-copy" path="$PROJECT_DIR$/../../cdm/src/main/resources" />
+            <element id="module-output" name="common" />
+            <element id="module-output" name="unidataCommon" />
+            <element id="module-output" name="opendap" />
+            <element id="module-output" name="grib" />
+            <element id="dir-copy" path="$PROJECT_DIR$/../../grib/resources" />
+          </element>
+          <element id="directory" name="lib">
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/release/bufrTables-2.0.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/release/prefsAll.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/casclient-2.1.1.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/commons-fileupload-1.2.1.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/commons-io-1.4.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/joda-time-1.6.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/httpunit.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/junit-4.5.jar" />
+            <element id="library" level="module" name="Logging" module-name="tds" />
+            <element id="library" level="module" name="Spring" module-name="tds" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/quartz-1.7.3.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/spring-test-2.5.jar" />
+            <element id="library" level="module" name="JSTL" module-name="tds" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/je-4.0.71.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/jfreechart-1.0.12.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/jcommon-1.0.15.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/epsg-wkt.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/geotk-bundle-referencing-3.04.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/json-taglib-0.4.1.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/release/ncwms.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/jakarta-oro-2.0.8.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/commons-httpclient-3.1.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/easymock-2.5.2.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/protobuf-java-2.1.0.jar" />
+            <element id="library" level="project" name="ehcache" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/slf4j-jdk14-1.5.6.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/slf4j-api-1.5.6.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/jna.jar" />
+            <element id="library" level="module" name="stax" module-name="cdm" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/release/visadNoDods.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/jdom.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/commons-logging-1.1.jar" />
+            <element id="file-copy" path="$PROJECT_DIR$/../../lib/external/commons-codec-1.3.jar" />
+          </element>
+        </element>
+      </root>
+    </artifact>
+  </component>
   <component name="BuildJarProjectSettings">
     <option name="BUILD_JARS_ON_MAKE" value="false" />
   </component>
