@@ -1,7 +1,7 @@
-# DO NOT EDIT THIS FILE: It is automatically generated from C:\Users\edavis\code\threddsFullDev\thredds\tds\src\main\template\thredds\server\tds.properties.TEMPLATE
-tds.version=4.2.20100615.2328
+# DO NOT EDIT THIS FILE: It is automatically generated from C:\dev\tds4.2\thredds\tds\src\main\template\thredds\server\tds.properties.TEMPLATE
+tds.version=4.2.20100723.2223
 tds.version.brief=4.2
-tds.version.builddate=20100615.2328
+tds.version.builddate=20100723.2223
 
 tds.url=http://www.unidata.ucar.edu/projects/THREDDS/tech/TDS.html
 tds.documentation.url=http://www.unidata.ucar.edu/projects/THREDDS/tech/TDS.html
