@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <jnlp spec="1.0+" codebase="http://www.unidata.ucar.edu/software/netcdf-java/v4.1/webstart">
   <information>
-    <title>NetCDF Tools UI 4.1</title>
+    <title>NetCDF Tools UI 4.2</title>
     <vendor>Unidata</vendor>
     <homepage href="http://www.unidata.ucar.edu/software/netcdf-java/"/>
     <description kind="short">GUI interface to netCDF-Java / Common Data Model</description>
@@ -16,20 +16,23 @@
   <resources>
     <j2se version="1.6+" max-heap-size="1024m"/>
     <jar href="netcdfUI.jar"/>
+    <jar href="bdb.jar"/>
     <jar href="bounce.jar"/>
     <jar href="bufrTables.jar"/>
     <jar href="codec.jar"/>
+    <jar href="ehcache.jar"/>
     <jar href="grib.jar"/>
     <jar href="httpclient.jar"/>
     <jar href="httplogging.jar"/>
     <jar href="jdom.jar"/>
     <jar href="jgoodies.jar"/>
-    <jar href="jpeg2000.jar"/>
     <jar href="loggingAPI.jar"/>
     <jar href="logging.jar"/>
     <jar href="opendap.jar"/>
+    <jar href="protobuf.jar"/>
     <jar href="resourcesOptional.jar"/>
     <jar href="spring.jar"/>
+    <jar href="unidatacommon.jar"/>
     <jar href="visadNoDods.jar"/>
   </resources>
 
