@@ -3,7 +3,10 @@ Version @VERSION.MINOR@
 Build Date = @BUILDTIME@
 
 Changes in version 4.2:
- 4: (xx-xx-xx)
+ 4: (2010-07-22)
+  FMRCDataset process ncml in ProtoDataset element
+  FMRCDataset check if 2D dataset exists, ncml in ProtoDataset
+  CoordAxis1D.makeBounds() check for numeric
   GridCoordSys.getRangesFromLatLonRect() uses LatLonPointImpl.lonNormalFrom() for latlon bounding box
   HDF5 bug: group btree entries were the wrong size when offsets = 4 bytes (!)
   Change GRIB projection name "rotated_lat_lon" to "rotated_latlon_grib"
@@ -11,7 +14,6 @@ Changes in version 4.2:
   HDF5 bug: group btree entries were the wrong size when offsets = 4 bytes (!)
   MADIS/AWIPS station profile improvements to plugin
   GRIB adds attribute _CoordinateTransforms = "" to lat/lon Coord sys variable; no longer need weird code in CoordSysBuilder.VarProcess()
-  MSGNavigation had major/minor axes reversed
   hdf5, nc3: attributes with no value
   add StereographicAzimuthalProjection, TransverseMercatorProjection elliptical earth (Heiko.Klein@met.no)
   FeatureCollectionConfig.Config: use collection name if it exists
